# LQHJ2.0

./: .gitignore  CMakeLists.txt  README.md  qml.qrc  test.qml
LQHJ20/qml/: Main.qml
LQHJ20/qml/components/: ChessPiece.qml  CustomButton.qml  Dialog.qml
LQHJ20/qml/view/: GameView.qml  MainMenuView.qml  SettingsView.qml  StoryView.qml
LQHJ20/src/app/: AppController.cpp  AppController.h
LQHJ20/src/game/: GameController.cpp  GameController.h
XingZi/: yhufsejkodfhsedjfhejk.md
qml/: Main.qml
qml/view/: MainMenuView.qml
res/story/: chapter1.json  chapter2.json  chapter3.json  chapter4.json
src/: main.cpp
src/app/: AppController.cpp  AppController.h
src/data/: ResourceManager.cpp  ResourceManager.h  SaveManager.cpp  SaveManager.h
src/game/: Board.cpp  Board.h  GameController.cpp  GameController.h  Player.cpp  Player.h
src/story/: Constants.h  StoryChapter.cpp  StoryChapter.h  StoryManager.cpp  StoryManager.h
src/utils/: Utils.cpp  Utils.h
test/: BoardTest.cpp
可行性分析/: 可行性分析.docx
